--- a/TP_Contact/contact/contact.ui
+++ b/TP_Contact/contact/contact.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1086</width>
-    <height>610</height>
+    <width>871</width>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,7 +46,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_GUID"/>
+         <widget class="QLineEdit" name="lineEdit_GUID">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -60,7 +64,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_firstname"/>
+         <widget class="QLineEdit" name="lineEdit_firstname">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -74,7 +82,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_lastname"/>
+         <widget class="QLineEdit" name="lineEdit_lastname">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -88,7 +100,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_email"/>
+         <widget class="QLineEdit" name="lineEdit_email">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -102,7 +118,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_tel"/>
+         <widget class="QLineEdit" name="lineEdit_tel">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -116,7 +136,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_category"/>
+         <widget class="QLineEdit" name="lineEdit_category">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -130,7 +154,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_city"/>
+         <widget class="QLineEdit" name="lineEdit_city">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -144,7 +172,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_birthday"/>
+         <widget class="QLineEdit" name="lineEdit_birthday">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -158,7 +190,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_country"/>
+         <widget class="QLineEdit" name="lineEdit_country">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -172,7 +208,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_list"/>
+         <widget class="QLineEdit" name="lineEdit_list">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -186,7 +226,11 @@
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="lineEdit_company"/>
+         <widget class="QLineEdit" name="lineEdit_company">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -223,29 +267,6 @@
      </property>
     </widget>
    </widget>
-   <widget class="QTextEdit" name="requeteBox">
-    <property name="geometry">
-     <rect>
-      <x>870</x>
-      <y>70</y>
-      <width>201</width>
-      <height>201</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="btn_fireSql">
-    <property name="geometry">
-     <rect>
-      <x>880</x>
-      <y>280</y>
-      <width>80</width>
-      <height>22</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>OK</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btn_load">
     <property name="geometry">
      <rect>
@@ -265,19 +286,19 @@
       <x>120</x>
       <y>450</y>
       <width>721</width>
-      <height>111</height>
+      <height>171</height>
      </rect>
     </property>
     <property name="title">
      <string>Requetes</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>20</y>
-       <width>661</width>
-       <height>91</height>
+       <x>2</x>
+       <y>22</y>
+       <width>693</width>
+       <height>86</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -286,15 +307,22 @@
         <item>
          <widget class="QLabel" name="label">
           <property name="text">
-           <string>DELETE</string>
+           <string>Supprimer les contact ayant leur</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="cbxDelete"/>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_14">
+          <property name="text">
+           <string>égal à</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLineEdit" name="tbxDelete"/>
-        </item>
-        <item>
-         <widget class="QComboBox" name="cbxDelete"/>
         </item>
         <item>
          <widget class="QPushButton" name="btnDelete">
@@ -310,21 +338,42 @@
         <item>
          <widget class="QLabel" name="label_13">
           <property name="text">
-           <string>UPDATE</string>
+           <string>Modifier les contacts ayant leur</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QLineEdit" name="tbxUpdate1"/>
+         <widget class="QComboBox" name="cbxUpdate2"/>
         </item>
         <item>
-         <widget class="QComboBox" name="cbxUpdate1"/>
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string>égal à</string>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QLineEdit" name="tbxUpdate2"/>
         </item>
         <item>
-         <widget class="QComboBox" name="cbxUpdate2"/>
+         <widget class="QLabel" name="label_16">
+          <property name="text">
+           <string>, mettre leur</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_17">
+          <property name="text">
+           <string>à</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="cbxUpdate1"/>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="tbxUpdate1"/>
         </item>
         <item>
          <widget class="QPushButton" name="btnUpdate">
@@ -332,6 +381,23 @@
            <string>Update</string>
           </property>
          </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_14">
+        <item>
+         <widget class="QLabel" name="label_18">
+          <property name="text">
+           <string>Rechercher les contacts ayant pour</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QComboBox" name="cbxSearch"/>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="tbxSearch"/>
         </item>
        </layout>
       </item>
@@ -344,8 +410,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1086</width>
-     <height>21</height>
+     <width>871</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
